выбор марки при вводе с параметрами

--- a/bot/TODO.txt
+++ b/bot/TODO.txt
@@ -1,3 +1,3 @@
-1. Разобраться с кнопками и состояниями бота
+1. Разобраться с кнопками и состояниями бота                        done
 2. Разобраться с помарками при поиске брендов
 3. Разораться с правильной обработкой исключений при работе с апи
